--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.10.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.0.5"
+    "react-id-swiper": "^1.6.8",
+    "react-scripts": "2.0.5",
+    "react-touch-carousel": "^0.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
